--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     @media only screen and (max-width: 600px) {
     .list-items-container {
-        font-size: 35px; /* Adjust font size for smaller screens */
-        top: 40%; /* Center vertically */
+        font-size: 28px; /* Adjust font size for smaller screens */
+        top: 38%; /* Center vertically */
     }
 }
 
@@ -57,9 +57,10 @@
 /* Media query for smaller screens */
 @media only screen and (max-width: 600px) {
     .message {
-        bottom: 10%;
+        bottom: 3%;
         width: 30%; /* Adjust width for smaller screens */
         font-size: 14px; /* Adjust font size for smaller screens */
+        min-width: 200px; /* Example minimum width */
     }
 }
 </style>
