--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:image" content="./image/happy.jpg">
 <title>Happy Sabbath</title>
 <style>
     .list-items-container {
@@ -295,8 +296,6 @@
             }
         });
     });
-</script>
-
-    
+</script>    
 </body>
 </html>
