--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:image" content="./image/happy.jpg">
+<link rel="icon" href="./image/happy.jpg" type="image/jpg">
 <title>Happy Sabbath</title>
 <style>
+    link[rel="icon"] {
+            border-radius: 50%;
+        }
+
     .list-items-container {
         width: 100%;
         font-size: 100px;
